[package]
name = "dN"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"                                     # Used for timestamping blocks
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0"                                 # JSON serialization
sha2 = "0.10"                                      # SHA256 hashing

[dependencies.rand]
version = "0.8"
features = ["std"]
